--- a/class_attributes_and_self.ipynb
+++ b/class_attributes_and_self.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "class_attributes_and_self.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjUYLTLuaHos41Q/f0QIJy",
+      "authorship_tag": "ABX9TyOHkc8cRYbX5yot337hdv+L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,9 @@
         "|ClassName.class_var | ClassName.class_var | YES|\n",
         "|ClassName.class_var | self.class_var | YES|\n",
         "|self.class_var | self.class_var | YES|\n",
-        "|self.class_var | ClassName.class_var | NO|"
+        "|self.class_var | ClassName.class_var | NO|\n",
+        "\n",
+        "Also note that, ClassName.class_var referred to as \"class variable\", and self.class_var is referred as \"instance variable\""
       ]
     },
     {
